--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(projectview)
+project(cscope)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
                       ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules
@@ -21,10 +21,13 @@ set(projectview_SRCS
 	projectviewplugin.cpp
 )
 
-kde4_add_plugin(kdevprojectviewplugin ${projectview_SRCS})
-target_link_libraries(kdevprojectviewplugin ${KDEVPLATFORM_INTERFACES_LIBRARIES} ${KDEVPLATFORM_LANGUAGE_LIBRARIES})
+kde4_add_plugin(kdevcscopeplugin ${projectview_SRCS})
+target_link_libraries(kdevcscopeplugin ${KDEVPLATFORM_INTERFACES_LIBRARIES} ${KDEVPLATFORM_LANGUAGE_LIBRARIES})
 
-install(TARGETS kdevprojectviewplugin DESTINATION ${PLUGIN_INSTALL_DIR})
+install(TARGETS kdevcscopeplugin DESTINATION ${PLUGIN_INSTALL_DIR})
 
-install(FILES kdevprojectview.desktop DESTINATION ${SERVICES_INSTALL_DIR})
+install(FILES kdevcscope.desktop DESTINATION ${SERVICES_INSTALL_DIR})
 
+ADD_CUSTOM_TARGET(uninstall "${CMAKE_COMMAND}"
+-P "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
+)
