--- a/kdevcscope.desktop
+++ b/kdevcscope.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Type=Service
 Comment=CScope for KDevelop
-Name=cscope
-GenericName=CScope
+Name=kcscope
+GenericName=KCScope
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=kdevcscopeplugin
 X-KDE-PluginInfo-Name=kdevcscopeplugin
